--- a/algal_growth.Rmd
+++ b/algal_growth.Rmd
@@ -32,7 +32,7 @@ library(patchwork)
 Open growth/weight dataset
 
 ```{r}
-run5_growth <- read.csv("data/run5_growth_all_012422.csv")
+run5_growth <- read.csv("/Users/Angela/Library/Mobile Documents/com~apple~CloudDocs/research_limu/run5_hyp_ulv_temp/final_temperature_run1-4/final_data_files/run5_growth_all_032422.csv")
 ```
 
 Make a new column for weight change (difference final from initial)
@@ -48,17 +48,26 @@ which may or may not be used
 ```{r}
 run5_growth$steady_growth_daily <- run5_growth$growth_rate_percent / 8
 ```
+## Make a new column that keeps only the numerical values for temperature (removes C)
 
+```{r}
+run5_growth$temp_clean <- as.factor(substr(run5_growth$temperature, 1, 2))
+```
 ## Change levels to factors
 
 ```{r}
-run5_growth$temperature <- as.factor(run5_growth$temperature)
+run5_growth$temperature <- as.factor(run5_growth$temp_clean)
 run5_growth$run <- as.factor(run5_growth$run)
 ```
 
 ```{r}
 run5_growth$treatment <- as.factor(as.character(run5_growth$treatment))
 
+```
+#assign run as a factor
+
+```{r}
+run5_growth$run <- as.factor(run5_growth$run)
 ```
 
 # Create subset of the data to isolate the species
@@ -90,12 +99,12 @@ qqline(resid(run5_growth_model_noint))
 ```
 
 ## Check the performance of the model for Ulva
-```{r, fig.height=8}
+```{r fig.height=8}
 performance::check_model(run5_growth_model_noint)
 ```
 These outputs show the model is acceptable
 
-
+##Run ANOVA and Tukey's comparison
 ```{r}
 anova(run5_growth_model_noint, type = c("III"), ddf = "Satterthwaite")
 ulva_growth_model_aov <- aov(growth_rate_percent ~ treatment + temperature, data = ulva)
@@ -110,8 +119,6 @@ summary(run5_growth_model_noint)
 # Effects Plots
 ```{r}
 plot(allEffects(run5_growth_model_noint))
-
-
 ```
 
 
