Added a linear regression to the script and finalized the output for both species in html from markdown file

--- a/generated_docs/ulva_etrmax_ek_mixed_model.Rmd
+++ b/generated_docs/ulva_etrmax_ek_mixed_model.Rmd
@@ -251,3 +251,12 @@ ulva_growth_etr_graph <- ggplot(ulva, aes(x=ek.1, y=growth_rate)) +
 ulva_growth_etr_graph
 ```
 
+Plot a regression between the photosynthetic independent variables of interest and growth rate
+``` {r}
+ulva_growth_etr_ek_graph <- ggplot(ulva, aes(x=rETRmax, y=ek.1)) + 
+  geom_point(alpha = 0.5, size = 3, show.legend = TRUE, aes(color = Treatment)) + 
+  geom_smooth(method = "lm", col = "black") + theme_bw() + 
+  labs(title = "Ulva lactuca rETRmax vs Ek", x = "rETRmax (μmols electrons m-2 s-1)", 
+       y = "Ek (μmols photons m-2 s-1)") + stat_regline_equation(label.x = 25, label.y = 165) + stat_cor()
+ulva_growth_etr_ek_graph
+```
