Final overview of data, replicates to be removed (actually replaced most, only one hypnea removed because dead). Ulva treatment 2.5 removed from growth.

--- a/generated_docs/algal_growth.Rmd
+++ b/generated_docs/algal_growth.Rmd
@@ -41,12 +41,13 @@ library(gt)
 library(purrr)
 library(stringr)
 library(tidyr)
+library(piecewiseSEM)
 ```
 #open weight dataset and make columns for growth rate from initial and final weights
 
 
 ```{r}
-all_growth <- read.csv("/Users/Angela/src/work/limu/algal_growth_photosynthesis/data_input/all_runs_growth_102222.csv")
+all_growth <- read.csv("/Users/Angela/src/work/limu/algal_growth_photosynthesis/data_input/all_runs_growth_011723.csv")
 ```
 
 Make a new column for weight change (difference final from initial)
@@ -82,23 +83,25 @@ all_growth$RLC.order <- as.factor(all_growth$RLC.order)
 ```
 
 Create subset of the data to isolate the species
+Remove the replicate that was dead with < -87% growth (photo verified it was dead)
 
 ```{r}
-hypnea <- subset(all_growth, Species == "Hm")
-ulva <- subset(all_growth, Species == "Ul")
+hypnea <- subset(all_growth, Species == "Hm" & growth_rate_percent > -87.96837)
+ulva <- subset(all_growth, Species == "Ul" & treatment != 2.5)
 ```
 
 Create subsets for the plots
+Remove the treatment 2.5 for Ulva because of excessive tissue sloughing.
 ```{r}
-ulva <- subset(all_growth, Species == "Ul")
+
 ulva$treatment_graph[ulva$treatment == 0] <- "1) 35ppt/0.5umol"
 ulva$treatment_graph[ulva$treatment == 1] <- "2) 35ppt/14umol" 
 ulva$treatment_graph[ulva$treatment == 2] <- "3) 28ppt/27umol" 
 ulva$treatment_graph[ulva$treatment == 3] <- "5) 18ppt/53umol" 
 ulva$treatment_graph[ulva$treatment == 4] <- "6) 11ppt/80umol"
-ulva$treatment_graph[ulva$treatment == 2.5] <- "4) 28ppt/53umol"
+#ulva$treatment_graph[ulva$treatment == 2.5] <- "4) 28ppt/53umol"
 
-hypnea <- subset(all_growth, Species == "Hm")
+
 hypnea$treatment_graph[hypnea$treatment == 0] <- "1) 35ppt/0.5umol"
 hypnea$treatment_graph[hypnea$treatment == 1] <- "2) 35ppt/14umol" 
 hypnea$treatment_graph[hypnea$treatment == 2] <- "3) 28ppt/27umol" 
@@ -146,7 +149,7 @@ performance::check_model(all_growth_model_noint)
 Get r-squared, summary of model
 
 ``` {r}
-r.squaredGLMM(all_growth_model_noint)
+rsquared(all_growth_model_noint)
 summary(all_growth_model_noint)
 ```
 These outputs should show whether the model is acceptable
@@ -187,7 +190,7 @@ ulva %>% ggplot(aes(treatment_graph, growth_rate_percent)) +
   geom_boxplot(size=0.5) + 
   geom_point(alpha = 0.5, size = 3, aes(color = temperature), show.legend = FALSE) + 
   labs(x="salinity/nitrate", y= "8-Day Growth Rate (%)", title= "A", subtitle = "Ulva lactuca") + 
-  scale_x_discrete(labels = c("35ppt/0.5umolN", "35ppt/14umolN", "28ppt/27umolN", "28ppt/53umolN", "18ppt/53umolN", "11ppt/80umolN")) + 
+  scale_x_discrete(labels = c("35ppt/0.5umolN", "35ppt/14umolN", "28ppt/27umolN", "18ppt/53umolN", "11ppt/80umolN")) + 
   ylim(-100, 200) + stat_mean() + 
   geom_hline(yintercept=0, color = "purple", size = 0.5, alpha = 0.5) +
   theme_bw() +
