--- a/generated_docs/hypnea_retrmax_ek_mixed_model.Rmd
+++ b/generated_docs/hypnea_retrmax_ek_mixed_model.Rmd
@@ -79,7 +79,7 @@ all_runs_photosyn_data$deltaNPQ <- as.factor(all_runs_photosyn_data$deltaNPQ)
 Subset the data and toggle between the species for output. Use Day 9 for final analysis ONLY
 This will also assign the proper labels for plots
 ```{r}
-hypnea <- subset(all_runs_photosyn_data, Species == "hm" & RLC.Day == 9 & ek.1 < 226)
+hypnea <- subset(all_runs_photosyn_data, Species == "hm" & RLC.Day == 9)
 hypnea$treatment_graph[hypnea$Treatment == 0] <- "1) 35ppt/0.5umol"
 hypnea$treatment_graph[hypnea$Treatment == 1] <- "2) 35ppt/14umol" 
 hypnea$treatment_graph[hypnea$Treatment == 2] <- "3) 28ppt/27umol" 
@@ -90,15 +90,18 @@ hypnea$treatment_graph[hypnea$Treatment == 2.5] <- "4) 28ppt/53umol"
 
 Add a column for growth rate from growth rate dataset to the already subsetted hypnea data frame
 ```{r}
-growth_rate <- read.csv("/Users/Angela/src/work/limu/algal_growth_photosynthesis/data_input/all_runs_growth_102222.csv")
+growth_rate <- read.csv("/Users/Angela/src/work/limu/algal_growth_photosynthesis/data_input/all_runs_growth_011723.csv")
 growth_rate$Species <- as.factor(growth_rate$Species)
 growth_rate$treatment <- as.factor(growth_rate$treatment)
+growth_rate$growth_rate_percent <- (growth_rate$final.weight - growth_rate$Initial.weight) / growth_rate$Initial.weight * 100
 ```
 
 Subset for hypnea only and calculate growth rate from final and initial weights
-```{r, growth_rate}
-gr_hypnea <- subset(growth_rate, Species == "Hm" & final.weight != 0.1017 & final.weight != 0.3224)
+Removed one dead individual hm6-4 from 10/9/21
+```{r}
+gr_hypnea <- subset(growth_rate, Species == "Hm" & growth_rate_percent > -87.96837)
 hypnea$growth_rate <- round((gr_hypnea$final.weight - gr_hypnea$Initial.weight) / gr_hypnea$Initial.weight * 100, digits = 2)
+
 ```
 
 #Run the model
@@ -106,7 +109,7 @@ Run model for rETRmax with two fixed effect variables and three random effects v
 
 ```{r hypnea}
 #run model without interaction between the treatments and temperature
-all_runs_photosyn_model_noint <- lmer(formula = rETRmax ~ Treatment + Temperature + (1 | Run)
+all_runs_photosyn_model_hyp <- lmer(formula = rETRmax ~ Treatment + Temperature + (1 | Run)
                                       + (1 | Plant.ID) + (1 | RLC.Order), data = hypnea)
 ```
 
@@ -118,22 +121,22 @@ hist(hypnea$rETRmax, main = paste("Hypnea musciformis rETRmax"), col = "olivedra
 hypnea %>% ggplot(aes(rETRmax)) +
   geom_histogram(binwidth=5, fill = "#5BB300", color = "black", size = 0.25, alpha = 0.85) +
   theme_bw()
-plot(resid(all_runs_photosyn_model_noint) ~ fitted(all_runs_photosyn_model_noint))
-qqnorm(resid(all_runs_photosyn_model_noint))
-qqline(resid(all_runs_photosyn_model_noint))
+plot(resid(all_runs_photosyn_model_hyp) ~ fitted(all_runs_photosyn_model_hyp))
+qqnorm(resid(all_runs_photosyn_model_hyp))
+qqline(resid(all_runs_photosyn_model_hyp))
 ```
 
 rETRmax -- Check the performance of the model
 ```{r, fig.height=8}
-performance::check_model(all_runs_photosyn_model_noint)
+performance::check_model(all_runs_photosyn_model_hyp)
 ```
 
 These outputs show the model is acceptable
 
 rETRmax -- Check r2 for model fit and print the model statistics summary
 ```{r}
-r.squaredGLMM(all_runs_photosyn_model_noint)
-summary(all_runs_photosyn_model_noint)
+r.squaredGLMM(all_runs_photosyn_model_hyp)
+summary(all_runs_photosyn_model_hyp)
 ```
 
 Use Bartlett's test to check for equal variance
@@ -148,25 +151,24 @@ welch_anova_treatment <- oneway.test(rETRmax ~ Treatment, data = hypnea, var.equ
 welch_anova_treatment
 welch_anova_temp <- oneway.test(rETRmax ~ Temperature, data = hypnea, var.equal = FALSE)
 welch_anova_temp
-games_howell_test(hypnea, rETRmax ~ Treatment, conf.level = 0.95, detailed = TRUE)
+games_howell_test(hypnea, rETRmax ~ Treatment, conf.level = 0.95, detailed = FALSE)
 ```
 
 rETRmax -- Plot and make a table of the results. Also get means for the treatments
 ```{r}
-plot(allEffects(all_runs_photosyn_model_noint))
-tab_model(all_runs_photosyn_model_noint)
+plot(allEffects(all_runs_photosyn_model_hyp))
+tab_model(all_runs_photosyn_model_hyp)
 
 hypnea %>% group_by(Treatment) %>% summarise_at(vars(rETRmax), list(mean = mean))
 
 hypnea %>% ggplot(aes(treatment_graph, rETRmax)) + 
   geom_boxplot(size=0.5) + 
-  geom_point(alpha = 0.5, size = 3, aes(color = Temperature), show.legend = FALSE) + 
-  labs(x="salinity/nitrate", y= "rETRmax (μmols electrons m-2 s-1)", title= "A", subtitle = "Hypnea musciformis") + 
-  scale_x_discrete(labels = c("35ppt/0.5umolN", "35ppt/14umolN", "28ppt/27umolN", "28ppt/53umolN", "18ppt/53umolN", "11ppt/80umolN")) + 
-  ylim(-1, 160) + stat_mean() + 
+  geom_point(alpha = 0.5, size = 3, aes(color = Temperature), show.legend = TRUE) + 
+  labs(x="salinity/nitrate", y= "rETRmax (μmols electrons m-2 s-1)", title= "B", subtitle = "Hypnea musciformis") + 
+  scale_x_discrete(labels = c("35ppt/0.5umolN", "35ppt/14umolN", "28ppt/27umolN", "28ppt/53umolN", "18ppt/53umolN", "11ppt/80umolN")) +   ylim(-1, 170) + stat_mean() + 
   geom_hline(yintercept=0, color = "purple", size = 0.5, alpha = 0.5) +
   theme_bw() +
-  theme(plot.title = element_text(face = "bold", vjust = -15, hjust = 0.05), plot.subtitle = element_text(face = "italic", vjust = -20, hjust = 0.05))
+  theme(legend.position = c(0.90,0.90), plot.title = element_text(face = "bold", vjust = -15, hjust = 0.05), plot.subtitle = element_text(face = "italic", vjust = -20, hjust = 0.05))
 ```
 
 Plot a regression between the photosynthetic independent variables of interest and growth rate
@@ -180,12 +182,12 @@ hypnea_growth_etr_graph <- ggplot(hypnea, aes(x=rETRmax, y=growth_rate)) +
 hypnea_growth_etr_graph
 
 #rETRmax vs. Ek
-hypnea_growth_etr_ek_graph <- ggplot(hypnea, aes(x=rETRmax, y=ek.1)) + 
+hypnea_etr_ek_graph <- ggplot(hypnea, aes(x=rETRmax, y=ek.1)) + 
   geom_point(alpha = 0.5, size = 3, show.legend = TRUE, aes(color = Treatment)) + 
   geom_smooth(method = "lm", col = "black") + theme_bw() + 
   labs(title = "Hypnea musciformis rETRmax vs Ek", x = "rETRmax (μmols electrons m-2 s-1)", 
        y = "Ek (μmols photons m-2 s-1)") + stat_regline_equation(label.x = 25, label.y = 165) + stat_cor()
-hypnea_growth_etr_ek_graph
+hypnea_etr_ek_graph
 ```
 
 Temperature did not have a significant effect on the outcome for rETRmax
@@ -241,10 +243,9 @@ hypnea %>% group_by(Treatment) %>% summarise_at(vars(ek.1), list(mean = mean))
 
 hypnea %>% ggplot(aes(treatment_graph, ek.1)) + 
   geom_boxplot(size=0.5) + 
-  geom_point(alpha = 0.5, size = 3, aes(color = Temperature), show.legend = FALSE) + 
-  labs(x="salinity/nitrate", y= "Ek (μmols photons m-2 s-1)", title= "A", subtitle = "Hypnea musciformis") + 
-  scale_x_discrete(labels = c("35ppt/0.5umolN", "35ppt/14umolN", "28ppt/27umolN", "28ppt/53umolN", "18ppt/53umolN", "11ppt/80umolN")) + 
-  ylim(-1, 160) + stat_mean() + 
+  geom_point(alpha = 0.5, size = 3, aes(color = Temperature), show.legend = TRUE) + 
+  labs(x="salinity/nitrate", y= "Ek (μmols photons m-2 s-1)", title= "B", subtitle = "Hypnea musciformis") + 
+  scale_x_discrete(labels = c("35ppt/0.5umolN", "35ppt/14umolN", "28ppt/27umolN", "28ppt/53umolN", "18ppt/53umolN", "11ppt/80umolN")) +   ylim(-1, 240) + stat_mean() + 
   geom_hline(yintercept=0, color = "purple", size = 0.5, alpha = 0.5) +
   theme_bw() +
   theme(plot.title = element_text(face = "bold", vjust = -15, hjust = 0.05), plot.subtitle = element_text(face = "italic", vjust = -20, hjust = 0.05))
