--- a/generated_docs/ulva_etrmax_ek_mixed_model.Rmd
+++ b/generated_docs/ulva_etrmax_ek_mixed_model.Rmd
@@ -90,7 +90,7 @@ ulva$treatment_graph[ulva$Treatment == 2.5] <- "4) 28ppt/53umol"
 
 Add a column for growth rate from growth rate dataset to the already subsetted Ulva data frame
 ```{r}
-growth_rate <- read.csv("/Users/Angela/src/work/limu/algal_growth_photosynthesis/data_input/all_runs_growth_102222.csv")
+growth_rate <- read.csv("/Users/Angela/src/work/limu/algal_growth_photosynthesis/data_input/all_runs_growth_011723.csv")
 growth_rate$Species <- as.factor(growth_rate$Species)
 growth_rate$treatment <- as.factor(growth_rate$treatment)
 ```
@@ -148,7 +148,7 @@ welch_anova_treatment <- oneway.test(rETRmax ~ Treatment, data = ulva, var.equal
 welch_anova_treatment
 welch_anova_temp <- oneway.test(rETRmax ~ Temperature, data = ulva, var.equal = FALSE)
 welch_anova_temp
-games_howell_test(ulva, rETRmax ~ Treatment, conf.level = 0.95, detailed = TRUE)
+games_howell_test(ulva, rETRmax ~ Treatment, conf.level = 0.95, detailed = FALSE)
 ```
 
 rETRmax -- Plot and make a table of the results. Also get means for the treatments
@@ -162,8 +162,7 @@ ulva %>% ggplot(aes(treatment_graph, rETRmax)) +
   geom_boxplot(size=0.5) + 
   geom_point(alpha = 0.5, size = 3, aes(color = Temperature), show.legend = FALSE) + 
   labs(x="salinity/nitrate", y= "rETRmax (μmols electrons m-2 s-1)", title= "A", subtitle = "Ulva lactuca") + 
-  scale_x_discrete(labels = c("35ppt/0.5umolN", "35ppt/14umolN", "28ppt/27umolN", "28ppt/53umolN", "18ppt/53umolN", "11ppt/80umolN")) + 
-  ylim(-1, 160) + stat_mean() + 
+  scale_x_discrete(labels = c("35ppt/0.5umolN", "35ppt/14umolN", "28ppt/27umolN", "28ppt/53umolN", "18ppt/53umolN", "11ppt/80umolN")) +   ylim(-1, 160) + stat_mean() + 
   geom_hline(yintercept=0, color = "purple", size = 0.5, alpha = 0.5) +
   theme_bw() +
   theme(plot.title = element_text(face = "bold", vjust = -15, hjust = 0.05), plot.subtitle = element_text(face = "italic", vjust = -20, hjust = 0.05))
@@ -221,7 +220,7 @@ welch_anova_treatment <- oneway.test(ek.1 ~ Treatment, data = ulva, var.equal = 
 welch_anova_treatment
 welch_anova_temp <- oneway.test(ek.1 ~ Temperature, data = ulva, var.equal = FALSE)
 welch_anova_temp
-games_howell_test(ulva, ek.1 ~ Treatment, conf.level = 0.95, detailed = TRUE)
+games_howell_test(ulva, ek.1 ~ Treatment, conf.level = 0.95, detailed = FALSE)
 ```
 
 Ek -- Plots and tables for the results
@@ -234,8 +233,7 @@ ulva %>% ggplot(aes(treatment_graph, ek.1)) +
   geom_boxplot(size=0.5) + 
   geom_point(alpha = 0.5, size = 3, aes(color = Temperature), show.legend = FALSE) + 
   labs(x="salinity/nitrate", y= "Ek (μmols photons m-2 s-1)", title= "A", subtitle = "Ulva lactuca") + 
-  scale_x_discrete(labels = c("35ppt/0.5umolN", "35ppt/14umolN", "28ppt/27umolN", "28ppt/53umolN", "18ppt/53umolN", "11ppt/80umolN")) + 
-  ylim(-1, 160) + stat_mean() + 
+  scale_x_discrete(labels = c("35ppt/0.5umolN", "35ppt/14umolN", "28ppt/27umolN", "28ppt/53umolN", "18ppt/53umolN", "11ppt/80umolN")) +   ylim(-1, 160) + stat_mean() + 
   geom_hline(yintercept=0, color = "purple", size = 0.5, alpha = 0.5) +
   theme_bw() +
   theme(plot.title = element_text(face = "bold", vjust = -15, hjust = 0.05), plot.subtitle = element_text(face = "italic", vjust = -20, hjust = 0.05))
@@ -243,15 +241,15 @@ ulva %>% ggplot(aes(treatment_graph, ek.1)) +
 
 plot linear regression Ek with growth rate
 ```{r}
-ulva_growth_etr_graph <- ggplot(ulva, aes(x=ek.1, y=growth_rate)) + 
+ulva_growth_ek_graph <- ggplot(ulva, aes(x=ek.1, y=growth_rate)) + 
   geom_point(alpha = 0.5, size = 3, show.legend = TRUE, aes(color = Treatment)) + 
   geom_smooth(method = "lm", col = "black") + theme_bw() + 
   labs(title = "Ulva lactuca Ek vs Growth Rate", x = "Ek (μmols photons m-2 s-1)", 
        y = "growth rate (%)") + stat_regline_equation(label.x = 25, label.y = 165) + stat_cor()
-ulva_growth_etr_graph
+ulva_growth_ek_graph
 ```
 
-Plot a regression between the photosynthetic independent variables of interest and growth rate
+Plot a regression between the photosynthetic rETRmax and Ek
 ``` {r}
 ulva_growth_etr_ek_graph <- ggplot(ulva, aes(x=rETRmax, y=ek.1)) + 
   geom_point(alpha = 0.5, size = 3, show.legend = TRUE, aes(color = Treatment)) + 
