--- a/generated_docs/hypnea_retrmax_ek_mixed_model.Rmd
+++ b/generated_docs/hypnea_retrmax_ek_mixed_model.Rmd
@@ -78,8 +78,9 @@ all_runs_photosyn_data$deltaNPQ <- as.factor(all_runs_photosyn_data$deltaNPQ)
 
 Subset the data and toggle between the species for output. Use Day 9 for final analysis ONLY
 This will also assign the proper labels for plots
+There was no D9 RLC for hm6-4 on 11/12/21 but had to remove hm6-4 from 10/9/21
 ```{r}
-hypnea <- subset(all_runs_photosyn_data, Species == "hm" & RLC.Day == 9)
+hypnea <- subset(all_runs_photosyn_data, Species == "hm" & RLC.Day == 9 & uid != "2021-10-09_hm6-4")
 hypnea$treatment_graph[hypnea$Treatment == 0] <- "1) 35ppt/0.5umol"
 hypnea$treatment_graph[hypnea$Treatment == 1] <- "2) 35ppt/14umol" 
 hypnea$treatment_graph[hypnea$Treatment == 2] <- "3) 28ppt/27umol" 
@@ -97,9 +98,9 @@ growth_rate$growth_rate_percent <- (growth_rate$final.weight - growth_rate$Initi
 ```
 
 Subset for hypnea only and calculate growth rate from final and initial weights
-Removed one dead individual hm6-4 from 10/9/21
+Removed one dead individual hm6-4 from 10/9/21 (hm6-4) and another dead from 11/12/21 (also (hm6-4)
 ```{r}
-gr_hypnea <- subset(growth_rate, Species == "Hm" & growth_rate_percent > -87.96837)
+gr_hypnea <- subset(growth_rate, Species == "Hm" & final.weight != 0.1017 & growth_rate_percent > -87.96837)
 hypnea$growth_rate <- round((gr_hypnea$final.weight - gr_hypnea$Initial.weight) / gr_hypnea$Initial.weight * 100, digits = 2)
 
 ```
@@ -110,13 +111,13 @@ Run model for rETRmax with two fixed effect variables and three random effects v
 ```{r hypnea}
 #run model without interaction between the treatments and temperature
 all_runs_photosyn_model_hyp <- lmer(formula = rETRmax ~ Treatment + Temperature + (1 | Run)
-                                      + (1 | Plant.ID) + (1 | RLC.Order), data = hypnea)
+                                      + (1 | Plant.ID) + (1 | RLC.Order), data = hypnea, REML = FALSE)
 ```
 
 rETRmax -- Make a histogram and residual plots of the data
 
 ```{r, all_runs_photosyn_model_noint, fig.width=5}
-hist(hypnea$rETRmax, main = paste("Hypnea musciformis rETRmax"), col = "olivedrab3", labels = TRUE)
+hist(hypnea$rETRmax, main = paste("Hypnea musciformis rETRmax"), col = "maroon", labels = TRUE)
 #or
 hypnea %>% ggplot(aes(rETRmax)) +
   geom_histogram(binwidth=5, fill = "#5BB300", color = "black", size = 0.25, alpha = 0.85) +
