--- a/generated_docs/algal_growth.Rmd
+++ b/generated_docs/algal_growth.Rmd
@@ -2,7 +2,10 @@
 title: "Ulva and Hypnea GROWTH Rate Percentage"
 author: "Angela Richards Donà"
 date: "10/11/2022"
-output: html_document
+output: 
+  html_document: 
+    fig_width: 9
+    fig_height: 7
 ---
 
 ## GROWTH RATE Analysis, Script Chunks, and Plots
@@ -10,7 +13,8 @@ output: html_document
 This is the analysis of the numerous runs of the Ulva and Hypnea salinity and nutrient experiments 
 conducted on the lanai in St. John 616. These experiments incorporated three temperature levels.
 Data gaps for both species filled in April 2022 and subsequently in October 2022. This output reflects all
-data totaling five treatments for each species. At end of October 2022 all data will be incorporated.
+data totaling six treatments for Hypnea and five for Ulva. Treatment 2.5 for Ulva was removed due to excessive
+tissue sloughing.
 
 Packages loaded:
 
@@ -26,10 +30,7 @@ library(DHARMa)
 library(performance)
 library(patchwork)
 library(rstatix)
-```
 #for plots and tables
-
-```{r, message=FALSE}
 library(ggplot2)
 library(ggpubr)
 library(forcats)
@@ -37,71 +38,132 @@ library(RColorBrewer)
 library(tidyverse)
 library(sjPlot)
 library(sjmisc)
+#library(mmtable2)
 library(gt)
 library(purrr)
 library(stringr)
 library(tidyr)
 library(piecewiseSEM)
 ```
-#open weight dataset and make columns for growth rate from initial and final weights
 
-
+Open weight dataset and make columns for growth rate from initial and final weights
 ```{r}
 all_growth <- read.csv("/Users/Angela/src/work/limu/algal_growth_photosynthesis/data_input/all_runs_growth_011723.csv")
 ```
-
 Make a new column for weight change (difference final from initial)
-
-```{r all_growth}
+```{r}
 all_growth$growth_rate_percent <- (all_growth$final.weight - all_growth$Initial.weight) / all_growth$Initial.weight * 100
 ```
 
-Also make a new column for daily growth rate from 8 day study (steady growth rate assumed rather than exponential), 
-which may or may not be used
-
+Make a new column for daily growth rate from 8 day study (steady growth rate assumed rather than exponential)
 ```{r}
 all_growth$steady_growth_daily <- all_growth$growth_rate_percent / 8
 ```
-Make a new column that keeps only the numerical values for temperature (removes C)
 
+Make a new column that keeps only the numerical values (effectively removes the C in temperatures for consistency)
 ```{r}
 all_growth$temp_clean <- as.factor(substr(all_growth$temperature, 1, 2))
 ```
-Change levels to factors
 
+Assign several variables as factors
 ```{r}
 all_growth$temperature <- as.factor(all_growth$temp_clean)
-
 all_growth$treatment <- as.factor(as.character(all_growth$treatment))
-
 all_growth$run <- as.factor(all_growth$run)
-
 all_growth$plant.ID <- as.factor(all_growth$plant.ID)
-
 all_growth$RLC.order <- as.factor(all_growth$RLC.order)
-
+all_growth$lunar.phase <- as.factor(all_growth$lunar.phase)
 ```
 
-Create subset of the data to isolate the species
-Remove hm6-4 on 11/12/21 because it was dead and had no D9 RLC (final weight 0.1017)
-and hm6-4 on 10/29/21 because it was white and also looked dead
+
+ULVA__________________________________________________________________________________________
+Subset data by species
 ```{r}
-hypnea <- subset(all_growth, Species == "Hm" & growth_rate_percent > -87.96837 & final.weight != 0.1017)
 ulva <- subset(all_growth, Species == "Ul" & treatment != 2.5)
 ```
 
-Create subsets for the plots
-Remove the treatment 2.5 for Ulva because of excessive tissue sloughing.
+Create new column with treatment specifications
 ```{r}
-
 ulva$treatment_graph[ulva$treatment == 0] <- "1) 35ppt/0.5umol"
 ulva$treatment_graph[ulva$treatment == 1] <- "2) 35ppt/14umol" 
 ulva$treatment_graph[ulva$treatment == 2] <- "3) 28ppt/27umol" 
 ulva$treatment_graph[ulva$treatment == 3] <- "5) 18ppt/53umol" 
 ulva$treatment_graph[ulva$treatment == 4] <- "6) 11ppt/80umol"
 #ulva$treatment_graph[ulva$treatment == 2.5] <- "4) 28ppt/53umol"
+```
 
+Make a histogram of the data for ulva
+```{r}
+hist(ulva$growth_rate_percent, main = paste("Ulva lactuca Growth Rate (%)"), col = "olivedrab3", labels = TRUE)
+#or
+ulva %>% ggplot(aes(growth_rate_percent)) +
+  geom_histogram(binwidth=5, fill = "#5BB300", color = "black", size = 0.25, alpha = 0.85) +
+  theme_bw()
+```  
 
+Run model without interaction
+```{r}
+growth_model_ulva <- lmer(formula = growth_rate_percent ~ treatment + temperature +
+                                 (1 | plant.ID) + (1 | lunar.phase), data = ulva, REML = TRUE)
+```
+
+Plot residuals
+```{r}
+hist(resid(growth_model_ulva))
+plot(resid(growth_model_ulva) ~ fitted(growth_model_ulva))
+qqnorm(resid(growth_model_ulva))
+qqline(resid(growth_model_ulva))
+```
+
+Check the performance of the model for dataset: ulva, make table, plot effects, get r2
+```{r}
+performance::check_model(growth_model_ulva)
+rsquared(growth_model_ulva)
+summary(growth_model_ulva)
+tab_model(growth_model_ulva, show.intercept = TRUE, show.se = TRUE, show.stat = TRUE, show.df = TRUE, show.zeroinf = TRUE)
+plot(allEffects(growth_model_ulva))
+```
+
+Construct null model to perform likelihood ratio test REML must be FALSE
+```{r}
+ulva_growth_treatment_null <- lmer(formula = growth_rate_percent ~ temperature + (1 | lunar.phase) + (1 | plant.ID), data = ulva, REML = FALSE)
+ulva_growth_model2 <- lmer(formula = growth_rate_percent ~ treatment + temperature + (1 |lunar.phase) + (1 | plant.ID), data = ulva, REML = FALSE)
+anova(ulva_growth_treatment_null, ulva_growth_model2)
+ulva_growth_temperature_null <- lmer(formula = growth_rate_percent ~ treatment + (1 | lunar.phase) + (1 | plant.ID), data = ulva, REML = FALSE)
+ulva_growth_model3 <- lmer(formula = growth_rate_percent ~ treatment + temperature + (1 | lunar.phase) + (1 | plant.ID), data = ulva, REML = FALSE)
+anova(ulva_growth_temperature_null, ulva_growth_model3)
+```
+
+Plots
+```{r}
+ulva %>% ggplot(aes(treatment_graph, growth_rate_percent)) + 
+  geom_boxplot(size=0.5) + 
+  geom_point(alpha = 0.75, size = 3, aes(color = temperature), show.legend = TRUE) + 
+  labs(x="salinity/nitrate", y= "8-Day Growth (%)", title= "A", subtitle = "Ulva lactuca") + 
+  scale_x_discrete(labels = c("35ppt/0.5umolN", "35ppt/14umolN", "28ppt/27umolN", "18ppt/53umolN", "11ppt/80umolN")) + 
+  ylim(-75, 200) + stat_mean() + 
+  scale_color_manual(values = c("#295102", "#7CB950", "#BDE269")) +
+  geom_hline(yintercept=4.46, color = "red", size = 0.5, alpha = 0.5) +
+  theme_bw() +
+  theme(legend.position = c(0.90,0.90), plot.title = element_text(face = "bold", vjust = -15, hjust = 0.05), 
+        plot.subtitle = element_text(face = "italic", size = 14, vjust = -20, hjust = 0.05))
+```
+
+Summarize the means
+```{r}
+ulva %>% group_by(treatment) %>% summarise_at(vars(growth_rate_percent), list(mean = mean))
+```
+
+HYPNEA______________________________________________________________________
+
+Removing hm6-4 on 11/12/21 because it was dead and had no D9 RLC (final weight 0.1017)
+and hm6-4 on 10/29/21 because it was white and also looked dead
+```{r}
+hypnea <- subset(all_growth, Species == "Hm" & growth_rate_percent > -87.96837 & final.weight != 0.1017)
+```
+
+For plots, add column with treatment specifications
+```{r}
 hypnea$treatment_graph[hypnea$treatment == 0] <- "1) 35ppt/0.5umol"
 hypnea$treatment_graph[hypnea$treatment == 1] <- "2) 35ppt/14umol" 
 hypnea$treatment_graph[hypnea$treatment == 2] <- "3) 28ppt/27umol" 
@@ -110,169 +172,64 @@ hypnea$treatment_graph[hypnea$treatment == 4] <- "6) 11ppt/80umol"
 hypnea$treatment_graph[hypnea$treatment == 2.5] <- "4) 28ppt/53umol"
 ```
 
-
-# Run the model
-
-# ULVA 
-run model without interaction since interaction caused collinearity issues
-
-```{r ulva}
-all_growth_model_noint <- lmer(formula = growth_rate_percent ~ treatment + temperature + 
-                                 (1 | plant.ID) + (1 | lunar.phase), data = ulva, REML = TRUE)
-```
-
-Make a histogram of the data for Ulva
-
+Make a histogram of the data for hypnea
 ```{r}
-hist(ulva$growth_rate_percent, main = paste("Ulva lactuca Growth Rate (%)"), col = "olivedrab3", labels = TRUE)
-```
-
-or
-```{r}
-ulva %>% ggplot(aes(growth_rate_percent)) +
-  geom_histogram(binwidth=5, fill = "#5BB300", color = "black", size = 0.25, alpha = 0.85) +
-  theme_bw()
-```
-
-Plot residuals etc
-```{r}
-plot(resid(all_growth_model_noint) ~ fitted(all_growth_model_noint))
-qqnorm(resid(all_growth_model_noint))
-qqline(resid(all_growth_model_noint))
-```
-
-Check the performance of the model for Ulva
-```{r fig.height=8}
-performance::check_model(all_growth_model_noint)
-```
-
-Get r-squared, summary of model
-
-``` {r}
-rsquared(all_growth_model_noint)
-summary(all_growth_model_noint)
-```
-These outputs should show whether the model is acceptable
-
-Get a summary of the means
-```{r}
-ulva %>% group_by(treatment) %>% summarise_at(vars(growth_rate_percent), list(mean = mean))
-```
-
-Check for equal variance
-``` {r}
-bartlett.test(growth_rate_percent ~ treatment, data = ulva)
-bartlett.test(growth_rate_percent ~ temperature, data = ulva)
-```
-
-Run Welch's ANOVA if not equal variance
-``` {r}
-welch_anova_treatment <- oneway.test(growth_rate_percent ~ treatment, data = ulva, var.equal = FALSE)
-welch_anova_treatment
-welch_anova_temp <- oneway.test(growth_rate_percent ~ temperature, data = ulva, var.equal = FALSE)
-welch_anova_temp
-```
-
-Pairwise comparisons for significant results
-``` {r}
-games_howell_test(ulva, growth_rate_percent ~ treatment, conf.level = 0.95, detailed = FALSE)
-```
-
-Effects Plots and model table
-```{r}
-tab_model(all_growth_model_noint)
-plot(allEffects(all_growth_model_noint))
-```
-
-Use ggplot2 to plot the results
-``` {r}
-ulva %>% ggplot(aes(treatment_graph, growth_rate_percent)) + 
-  geom_boxplot(size=0.5) + 
-  geom_point(alpha = 0.5, size = 3, aes(color = temperature), show.legend = FALSE) + 
-  labs(x="salinity/nitrate", y= "8-Day Growth Rate (%)", title= "A", subtitle = "Ulva lactuca") + 
-  scale_x_discrete(labels = c("35ppt/0.5umolN", "35ppt/14umolN", "28ppt/27umolN", "18ppt/53umolN", "11ppt/80umolN")) + 
-  ylim(-100, 200) + stat_mean() + 
-  geom_hline(yintercept=0, color = "purple", size = 0.5, alpha = 0.5) +
-  theme_bw() +
-  theme(plot.title = element_text(face = "bold", vjust = -15, hjust = 0.05), 
-        plot.subtitle = element_text(face = "italic", vjust = -20, hjust = 0.05))
-```
-
-# HYPNEA 
-```{r hypnea}
-all_growth_model_noint <- lmer(formula = growth_rate_percent ~ treatment + temperature + 
-                                 (1 | run) + (1 | plant.ID) + (1 | RLC.order), data = hypnea, REML = TRUE)
-```
-
-These outputs show the model is acceptable for the data
-
-```{r, fig.width=5}
 hist(hypnea$growth_rate_percent, main = paste("Hypnea musciformis Growth Rate (%)"), col = "maroon", labels = TRUE)
-```
-Or
-``` {r}
+
 hypnea %>% ggplot(aes(growth_rate_percent)) +
   geom_histogram(binwidth=5, fill = "#990066", color = "black", size = 0.25, alpha = 0.85) +
   theme_bw()
 ```
 
+Run model without interaction
 ```{r}
-plot(resid(all_growth_model_noint) ~ fitted(all_growth_model_noint))
-qqnorm(resid(all_growth_model_noint))
-qqline(resid(all_growth_model_noint))
+growth_model_hypnea <- lmer(formula = growth_rate_percent ~ treatment + temperature + (1 | plant.ID) +
+                                 (1 | run) + (1 | RLC.order), data = hypnea, REML = TRUE)
 ```
 
-Check the performance of the model for Hypnea
-```{r, fig.height=8}
-performance::check_model(all_growth_model_noint)
-```
-
-Get r squared, summary of model
-``` {r}
-r.squaredGLMM(all_growth_model_noint)
-summary(all_growth_model_noint)
-```
-
-Get a summary of means
+Plot residuals for hypnea growth model
 ```{r}
-hypnea %>% group_by(treatment) %>% summarise_at(vars(growth_rate_percent), list(average = mean))
+hist(resid(growth_model_hypnea))
+plot(resid(growth_model_hypnea) ~ fitted(growth_model_hypnea))
+qqnorm(resid(growth_model_hypnea))
+qqline(resid(growth_model_hypnea))
 ```
-*Treatment 3.5 is the additional treatment 28 ppt/53 micromol N
 
-Check for equal variance
+Check the performance of the model, make table, plot effects, get r2
 ```{r}
-bartlett.test(growth_rate_percent ~ treatment, data = hypnea)
-bartlett.test(growth_rate_percent ~ temperature, data = hypnea)
+performance::check_model(growth_model_hypnea)
+r.squaredGLMM(growth_model_hypnea)
+summary(growth_model_hypnea)
+tab_model(growth_model_hypnea, show.intercept = TRUE, show.se = TRUE, show.stat = TRUE, show.df = TRUE, show.zeroinf = TRUE)
+plot(allEffects(growth_model_hypnea))
 ```
 
-Run Welch's ANOVA if not equal variance
-``` {r}
-welch_anova_treatment <- oneway.test(growth_rate_percent ~ treatment, data = hypnea, var.equal = FALSE)
-welch_anova_treatment
-welch_anova_temp <- oneway.test(growth_rate_percent ~ temperature, data = hypnea, var.equal = FALSE)
-welch_anova_temp
-```
-
-Pairwise comparison with Games Howell Test
-``` {r}
-games_howell_test(hypnea, growth_rate_percent ~ treatment, conf.level = 0.95, detailed = FALSE)
-```
-
-# Effects Plot and table of model
+Construct null model to perform likelihood ratio test REML must be FALSE
 ```{r}
-tab_model(all_growth_model_noint)
-plot(allEffects(all_growth_model_noint))
+hypnea_growth_treatment_null <- lmer(formula = growth_rate_percent ~ temperature + (1 | plant.ID) + (1 | run) + (1 | RLC.order), data = hypnea, REML = FALSE)
+hypnea_growth_model2 <- lmer(formula = growth_rate_percent ~ treatment + temperature + (1 | plant.ID) + (1 | run) + (1 | RLC.order), data = hypnea, REML = FALSE)
+anova(hypnea_growth_treatment_null, hypnea_growth_model2)
+hypnea_growth_temperature_null <- lmer(formula = growth_rate_percent ~ treatment + (1 | plant.ID) + (1 | run) + (1 | RLC.order), data = hypnea, REML = FALSE)
+hypnea_growth_model3 <- lmer(formula = growth_rate_percent ~ treatment + temperature + (1 | plant.ID) + (1 | run) + (1 | RLC.order), data = hypnea, REML = FALSE)
+anova(hypnea_growth_temperature_null, hypnea_growth_model3)
 ```
 
-Make a plot with ggplot2
-``` {r}
+Plots
+```{r}
 hypnea %>% ggplot(aes(treatment_graph, growth_rate_percent)) + 
   geom_boxplot(size=0.5) + 
-  geom_point(alpha = 0.5, size = 3, aes(color = temperature), show.legend = TRUE) + 
+  geom_point(alpha = 0.75, size = 3, aes(color = temperature), show.legend = TRUE) + 
   labs(x="salinity/nitrate", y= "8-Day Growth Rate (%)", title= "B", subtitle = "Hypnea musciformis") + 
   scale_x_discrete(labels = c("35ppt/0.5umolN", "35ppt/14umolN", "28ppt/27umolN", "28ppt/53umolN", "18ppt/53umolN", "11ppt/80umolN")) + 
-  ylim(-100, 200) + stat_mean() + 
-  geom_hline(yintercept=0, color = "purple", size = 0.5, alpha = 0.5) +
+  ylim(-75, 200) + stat_mean() + 
+  scale_color_manual(values = c("#9C0627", "#BB589F", "#F4B4E2")) +
+  geom_hline(yintercept=0, color = "red", size = 0.5, alpha = 0.5) +
   theme_bw() +
-  theme(legend.position = c(0.90,0.90), plot.title = element_text(face = "bold", vjust = -15, hjust = 0.05), plot.subtitle = element_text(face = "italic", vjust = -20, hjust = 0.05))
+  theme(legend.position = c(0.90,0.90), plot.title = element_text(face = "bold", vjust = -15, hjust = 0.05), 
+        plot.subtitle = element_text(face = "italic", size = 14, vjust = -20, hjust = 0.05))
+```
+
+Summarize the means
+```{r}
+hypnea %>% group_by(treatment) %>% summarise_at(vars(growth_rate_percent), list(mean = mean))
 ```
