Added jitter to plots for publication

--- a/generated_docs/ek_model.Rmd
+++ b/generated_docs/ek_model.Rmd
@@ -118,7 +118,7 @@ ulva %>% ggplot(aes(treatment_graph, ek.1)) +
   scale_x_discrete(labels = c("35ppt/0.5umolN", "35ppt/14umolN", "28ppt/27umolN", "18ppt/53umolN", "11ppt/80umolN")) + 
   ylim(-1, 250) + stat_mean() +
   scale_color_manual(values = c("#295102", "#7CB950", "#BDE269")) +
-  geom_hline(yintercept=0, color = "red", size = 0.5, alpha = 0.5) +
+  geom_hline(yintercept=50, color = "red", size = 0.5, alpha = 0.5) +
   theme_bw() +
   theme(legend.position = c(0.90,0.90), plot.title = element_text(face = "bold", vjust = -15, hjust = 0.05), 
         plot.subtitle = element_text(face = "italic", size = 14, vjust = -20, hjust = 0.05))
@@ -224,7 +224,7 @@ hypnea %>% ggplot(aes(treatment_graph, ek.1)) +
   scale_x_discrete(labels = c("35ppt/0.5umolN", "35ppt/14umolN", "28ppt/27umolN", "28ppt/53umolN", "18ppt/53umolN", "11ppt/80umolN")) + 
   ylim(-1, 250) + stat_mean() + 
   scale_color_manual(values = c("#9C0627", "#BB589F", "#F4B4E2")) +
-  geom_hline(yintercept=0, color = "red", size = 0.5, alpha = 0.5) +
+  geom_hline(yintercept=50, color = "red", size = 0.5, alpha = 0.5) +
   theme_bw() +
   theme(legend.position = c(0.90,0.90), plot.title = element_text(face = "bold", vjust = -15, hjust = 0.05), 
         plot.subtitle = element_text(face = "italic", size = 14, vjust = -20, hjust = 0.05))
@@ -250,7 +250,7 @@ hypnea_growth_ek_graph
 Summarize the means
 ```{r}
 hypnea %>% group_by(Treatment) %>% summarise_at(vars(ek.1), list(mean = mean))
-hypnea %>% group_by(Run) %>% summarise_at(vars(ek.1), list(mean = mean))
+hypnea %>% group_by(Temperature) %>% summarise_at(vars(ek.1), list(mean = mean))
 ```
 
 
